--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@data-fair/lib": "^0.23.0",
     "@mdi/font": "^7.4.47",
     "chroma-js": "^2.4.2",
+    "debounce": "^2.0.0",
     "ofetch": "^1.3.3",
     "url-polyfill": "^1.1.12",
     "vue": "^3.4.19",
