--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "ncp": "^2.0.0",
     "rimraf": "^5.0.5",
     "rollup-plugin-visualizer": "^5.12.0",
+    "sass": "^1.70.0",
     "unplugin-fonts": "^1.1.1",
     "vite": "^5.1.2",
     "vite-plugin-commonjs": "^0.10.1",
