--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "chroma-js": "^2.4.2",
     "debounce": "^2.0.0",
     "ofetch": "^1.3.3",
+    "palex": "^1.0.0",
     "url-polyfill": "^1.1.12",
     "vue": "^3.4.19",
     "vuetify": "^3.5.4"
