--- a/package.json
+++ b/package.json
@@ -24,14 +24,12 @@
   ],
   "dependencies": {
     "@data-fair/lib": "^0.23.0",
-    "@mdi/font": "^7.4.47",
     "chroma-js": "^2.4.2",
     "debounce": "^2.0.0",
     "ofetch": "^1.3.3",
     "palex": "^1.0.0",
     "url-polyfill": "^1.1.12",
-    "vue": "^3.4.19",
-    "vuetify": "^3.5.4"
+    "vue": "^3.4.19"
   },
   "devDependencies": {
     "@babel/core": "^7.23.9",
@@ -54,7 +52,6 @@
     "sass": "^1.70.0",
     "unplugin-fonts": "^1.1.1",
     "vite": "^5.1.2",
-    "vite-plugin-commonjs": "^0.10.1",
-    "vite-plugin-vuetify": "^2.0.1"
+    "vite-plugin-commonjs": "^0.10.1"
   }
 }
